# rust-servers-services-and-apps

ezytutors/tutor-db/: Cargo.toml  database.sql  readme.md
ezytutors/tutor-db/.sqlx/: query-1a1b29b2225f43e5076aebd4357a70558e5f0ecb2b70be7add56cb769b851e56.json  query-4f948d92472cbece46022645f6180c626feb869a9b56a157b15c3225358f3047.json  query-67c69c5352d4fd04e02bcecb2810ce71790487ae5cfd040b1a4f76294bd3b0c0.json
ezytutors/tutor-db/src/: main.rs
ezytutors/tutor-nodb/: Cargo.toml
scenario1/http/: Cargo.toml
scenario1/http/src/: httprequest.rs  httpresponse.rs
scenario1/httpserver/public/: index.html
scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
scenario1/tcpclient/src/: main.rs
scenario1/tcpserver/src/: main.rs
