[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
openssl = { version = "0.10.57", features = ["vendored"] }
